# ServerParadise

./: .gitignore  CMakeLists.txt  config.example.json
include/: mod_data.h
src/: database.cpp  database.h  logger.cpp  logger.h  main.cpp  server.cpp  server.h
